force-app/main/default/objects/ECM_Status_Bar_Configuration__c/ECM_Status_Bar_Configuration__c.object-meta.xml
<CustomObject>
    <description>ECM v1
Configuration for an inline Visualforce page used as a status bar on  Case Record, Contact or Client Household standard salesforce pages</description>
    <label>ECM Status Bar Configuration</label>
    <nameField>
        <label>ECM Status Bar Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECM Status Bar Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>