force-app/main/default/objects/ECM_Status_Bar_Configuration__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <description>The type of case record that this configuration will be associated with.</description>
    <inlineHelpText>The type of case record that this configuration will be associated with.</inlineHelpText>
    <label>Case Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>