force-app/main/default/objects/ECM_Status_Bar_Configuration__c/fields/ExpUnique__c.field-meta.xml
<CustomField>
    <fullName>ExpUnique__c</fullName>
    <description>Combination of Program__c, RecordTypeId and Case_Record_Type__c</description>
    <externalId>true</externalId>
    <label>ExpUnique</label>
    <length>125</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>