force-app/main/default/objects/ECM_Status_Bar_Configuration__c/fields/Non_Visual_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Non_Visual_Field_Set__c</fullName>
    <defaultValue>&quot;ECM_Status_Bar_Non_Visual_Field_Set&quot;</defaultValue>
    <description>The global name of the field set for all objects related to this configuration. ECM will query and populate each record with fields from the field set and make them available through variables in the page. These fields are query-only.</description>
    <inlineHelpText>Case Record, Contact or Household Member based on Standard Controller</inlineHelpText>
    <label>Non Visual Field Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>