force-app/main/default/objects/ECM_Status_Bar_Configuration__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The program that this configuration will be related to.</description>
    <inlineHelpText>The program that this configuration will be related to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>ECM_Dashboard_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>