force-app/main/default/objects/ECM_Status_Bar_Configuration__c/fields/Status_Bar_Style__c.field-meta.xml
<CustomField>
    <fullName>Status_Bar_Style__c</fullName>
    <defaultValue>&quot;border:2px solid black;&quot;</defaultValue>
    <description>Controls the html style attribute of the status bar</description>
    <inlineHelpText>Controls the html style attribute of the status bar</inlineHelpText>
    <label>Status Bar Style</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>