force-app/main/default/objects/ECM_Status_Bar_Configuration__c/recordTypes/Case_Record.recordType-meta.xml
<RecordType>
    <fullName>Case_Record</fullName>
    <active>true</active>
    <label>Case Record</label>
</RecordType>