force-app/main/default/objects/ECM_Status_Bar_Configuration__c/recordTypes/Client_Household.recordType-meta.xml
<RecordType>
    <fullName>Client_Household</fullName>
    <active>true</active>
    <label>Client Household</label>
</RecordType>