force-app/main/default/objects/ECM_Status_Bar_Configuration__c/recordTypes/Enrolled_Client.recordType-meta.xml
<RecordType>
    <fullName>Enrolled_Client</fullName>
    <active>true</active>
    <label>Enrolled Client</label>
</RecordType>