force-app/main/default/objects/ECM_Status_Bar_Configuration__c/recordTypes/Enrolled_Client_Household.recordType-meta.xml
<RecordType>
    <fullName>Enrolled_Client_Household</fullName>
    <active>true</active>
    <label>Enrolled Client Household</label>
</RecordType>