force-app/main/default/objects/ECM_Status_Bar_Configuration__c/validationRules/Exp_Case_Record_Type_Valid_Only_for_CR.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Case_Record_Type_Valid_Only_for_CR</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Case_Record_Type__c != null &amp;&amp;  RecordType.Name != &apos;Case Record&apos;, true, false)</errorConditionFormula>
    <errorMessage>Case Record Type may be set only when record type is &apos;Case Record&apos;. Either change the record type for this configuration or remove the value for Case Record Type.</errorMessage>
</ValidationRule>