force-app/main/default/objects/ECM_Status_Bar_Configuration__c/validationRules/Exp_Program_Valid_Only_For_Case_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Program_Valid_Only_For_Case_Record</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Program__c != null &amp;&amp;  RecordType.Name != &apos;Case Record&apos;, true, false)</errorConditionFormula>
    <errorMessage>Program may be set only when record type is &apos;Case Record&apos;. Either change the record type for this configuration or remove the value for Program.</errorMessage>
</ValidationRule>